# FastAPI

./: .env.example  .gitignore  README.md  config.py  db.py  main.py  models.py  pyproject.toml
relationship/: azure.json  azureApi.json  azureApiManagement.json  azureEventgrid.json  azureServicebus.json  btpCloudInteg.json  btp_api_management.json  btp_event.json  btpcloudIntegration.json  dataInventory.json  datasource.json
routes/: interfaces.py
